--- a/index.html
+++ b/index.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Training Documentation</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Gearbox-Afretec Training</h1>
+    </header>
+    <div class="profile">
+        <div class="profile-pic">
+            <img src="lennoxOjore.jpg" alt=".ennoxOjore" width="150" height="150">
+        </div>
+        
+        <div class="profile-description">
+            <h2>Ismael Lennox S. Ojore</h2>
+            <p>Junior Embedded Systems Developer with a strong foundation in technology and a curiosity for learning.
+                Currently a student, actively seeking opportunities to apply and expand technical knowledge in embedded
+                systems development. Purposing to leverage on my skills by learning from a team of experienced engineers.
+                Consistently seeking out new challenges and staying up-to-date with emerging technologies in the field.
+                Purposing to contribute to innovative and creative solutions in embedded systems.</p>
+        </div>
+    </div>
+    <main>
+        <h1>Training Modules</h1>
+        <ul>
+            <li><a href="module1.html">Module 1</a></li>
+            <li><a href="module2.html">Module 2</a></li>
+            <li><a href="module3.html">Module 3</a></li>
+            <li><a href="module4.html">Module 4</a></li>
+            <li><a href="module5.html">Module 5</a></li>
+            <li><a href="module6.html">Module 6</a></li>
+            <li><a href="module7.html">Module 7</a></li>
+            <li><a href="module8.html">Module 8</a></li>
+            <li><a href="module9.html">Module 9</a></li>
+            <li><a href="module10.html">Module 10</a></li>
+            <li><a href="module11.html">Module 11</a></li>
+            <li><a href="module12.html">Module 12</a></li>
+        </ul>
+    </main>
 </body>
 </html>
