--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="documentation.css">
     <title>Training Documentation</title>
 </head>
 <body>
     <header>
         <h1>Gearbox-Afretec Training</h1>
     </header>
+    <nav class="navbar">
+        <a href="index.html" class="nav-button">Home</a>
+        <div class="module-navigation">
+            <a href="/module1/module1.html" class="nav-button">Previous Module</a>
+            <a href="module2.html" class="nav-button">Next Module</a>
+        </div>
+    </nav>
     <div class="profile">
         <div class="profile-pic">
             <img src="lennoxOjore.jpg" alt=".ennoxOjore" width="150" height="150">
