--- a/module1.html
+++ b/module1.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="documentation.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Module 1</title>
 </head>
 <body>
+    <nav class="navbar">
+        <a href="index.html" class="nav-button">Home</a>
+        <div class="module-navigation">
+            <a href="module2.html" class="nav-button">Next Module</a>
+        </div>
+    </nav>
     <header>
         <h1>Module 1 Summary</h1>
     </header>
