finished rough draft of module 1

--- a/module1.html
+++ b/module1.html
@@ -67,6 +67,32 @@
     
     <p>Using Visual Studio Code, I created an index.html file and added my profile information along with links to various modules. Additionally, I created a module1.html file for documentation and a documentation.css file to enhance appearance.</p>
     <p>Markdown files were used to summarize the module, and updates were tracked using Git before pushing them to GitHub.</p>
+
+    <h2>Markdown</h2>
+    <p>This is a light weight mark up language that can be used to format plain text documents.</p>
+    <p>Advantages of markdown include:</p>
+    <ul>
+        <li>Used in everything.</li>
+        <li>It is portable.</li>
+        <li>It is platform independent.</li>
+        <li>It is everywhere.</li>
+    </ul>
+    <p>Applications of markdown include:</p>
+    <ul>
+        <li>Taking notes.</li>
+        <li>Website content creation.</li>
+        <li>Produce ready to print documents.</li>
+    </ul>
+    <h2>Difference Between markup and markdown</h2>
+    <p><strong>Markup</strong> Is a general term for text formatting usde to structure content that is more complex, powerfull allowing detailed styling and formating.</p>
+    <p>examples include:</p>
+    <ul>
+        <li>HTML</li>
+        <li>XML (used for data storage and transfer)</li>
+    </ul>
+    <p>Markdown is a lightweight markup language designed for easy readibility and conversion to HTML that commonly uses plain text symbols.</p>
+    <p>Examples include README files and documentation</p>
+    <p>The real power of markdown is found in its readability and use of software to convert to html</p>
     </main>
 </body>
 </html>
