updated part of module 2

--- a/module2.html
+++ b/module2.html
@@ -17,6 +17,130 @@
     <header>
         <h1>Module 2 Summary</h1>
     </header>
+    <main>
+        <h1 id="embedded-systems">Embedded Systems</h1>
+<h2 id="definition">Definition</h2>
+<p>An <strong>embedded system</strong> is a combination of computer hardware and software designed for a specific function.</p>
+<h2 id="use-cases">Use Cases</h2>
+<ul>
+<li>Machines</li>
+<li>Consumer electronics</li>
+<li>Medical devices</li>
+</ul>
+<h2 id="typical-structure-of-embedded-systems">Typical Structure of Embedded Systems</h2>
+<ul>
+<li><strong>Microprocessor / Microcontroller</strong></li>
+<li><strong>Input/Output Devices</strong></li>
+<li><strong>Memory</strong></li>
+</ul>
+<h2 id="chip-manufacturers-for-embedded-systems">Chip Manufacturers for Embedded Systems</h2>
+<ul>
+<li>Apple</li>
+<li>IBM</li>
+<li>Intel</li>
+<li>Texas Instruments</li>
+</ul>
+<h2 id="applications-of-embedded-systems">Applications of Embedded Systems</h2>
+<h3 id="automobiles-">Automobiles:</h3>
+<ul>
+<li>Cruise Control</li>
+<li>Backup Sensor</li>
+<li>Suspension Control</li>
+<li>Navigation System</li>
+<li>Alarm System</li>
+<li>Airbag Systems</li>
+</ul>
+<h3 id="mobile-phones-">Mobile Phones:</h3>
+<ul>
+<li>Cameras</li>
+<li>USB I/O Modules</li>
+<li>OS</li>
+</ul>
+<h3 id="other-applications-">Other Applications:</h3>
+<ul>
+<li>Industrial Machines</li>
+<li>Medical Equipment</li>
+<li>Fitness Trackers</li>
+</ul>
+<p>Typically, embedded systems are <strong>low-cost, low-power-consuming, small computers</strong> embedded in other mechanical or electrical systems.</p>
+<h2 id="major-components-of-an-embedded-system">Major Components of an Embedded System</h2>
+<ul>
+<li><strong>Processor</strong></li>
+<li><strong>Power Supply</strong></li>
+<li><strong>Memory</strong></li>
+<li><strong>Communication Ports</strong></li>
+</ul>
+<h2 id="firmware">Firmware</h2>
+<p>Firmware is a type of <strong>software embedded into hardware</strong> for low-level control, acting as a bridge between hardware and software.</p>
+<h2 id="characteristics-of-embedded-systems">Characteristics of Embedded Systems</h2>
+<ul>
+<li>Consists of <strong>hardware, software, and firmware</strong></li>
+<li>Can be embedded in larger systems to perform specific tasks</li>
+<li>Often use <strong>ASIC &amp; FPGA SOC</strong></li>
+<li>Often used for <strong>sensing &amp; real-time computing</strong></li>
+<li>Can vary in <strong>complexity &amp; function</strong></li>
+<li>Often required to perform under a <strong>time constraint</strong> to keep the larger system performing properly</li>
+<li>Can be <strong>microprocessor or microcontroller based</strong></li>
+</ul>
+<h2 id="structure-of-embedded-systems">Structure of Embedded Systems</h2>
+<h3 id="-hardware-"><strong>Hardware</strong></h3>
+<ul>
+<li>Based around <strong>microprocessors &amp; microcontrollers</strong></li>
+<li><strong>Microcontrollers</strong> - All components built on one chip</li>
+<li><strong>Microprocessor</strong> - CPU integrated with other computing components</li>
+</ul>
+<h3 id="-software-firmware-"><strong>Software &amp; Firmware</strong></h3>
+<ul>
+<li>Varies in complexity</li>
+<li>Requires little memory</li>
+</ul>
+<h3 id="-real-time-operating-systems-rtos-"><strong>Real-Time Operating Systems (RTOS)</strong></h3>
+<p>Defines how the system works by supervising software &amp; setting release schedules during program execution.</p>
+<h2 id="hardware-components">Hardware Components</h2>
+<ul>
+<li><strong>Sensors</strong> - Convert physical sense to electrical signals</li>
+<li><strong>Analog-to-Digital Converters (ADC)</strong></li>
+<li><strong>Processors</strong> - Process digital signals &amp; store them in memory</li>
+<li><strong>Digital-to-Analog Converters (DAC)</strong></li>
+<li><strong>Actuators</strong> - Convert electrical signals to physical signals</li>
+</ul>
+<h2 id="types-of-embedded-systems">Types of Embedded Systems</h2>
+<h3 id="-category-1-"><strong>Category 1</strong></h3>
+<ol>
+<li><strong>Mobile Embedded Systems</strong> - Digital cameras, smartphones, laptops</li>
+<li><strong>Networked Embedded Systems</strong> - Home security system, Point of Sale (POS) system</li>
+<li><strong>Standalone Embedded Systems</strong> - Calculator, MP3 player</li>
+<li><strong>Real-Time Embedded Systems</strong> - Traffic control systems, medical, military applications</li>
+</ol>
+<h3 id="-category-2-"><strong>Category 2</strong></h3>
+<ol>
+<li><strong>Small-Scale</strong> - ≤ 8-bit microcontroller</li>
+<li><strong>Medium-Scale</strong> - Uses larger 16-32 bit microcontroller and often links controllers together</li>
+<li><strong>Sophisticated-Scale</strong> - Uses several algorithms that result in software &amp; hardware complexity, requiring more complicated software</li>
+</ol>
+<h2 id="embedded-system-architectures">Embedded System Architectures</h2>
+<ul>
+<li><strong>Simple Control Loops</strong> - Subroutine managing specific parts</li>
+<li><strong>Interrupt-Controlled Systems</strong> - Main core with a secondary loop</li>
+<li><strong>Cooperative Multitasking</strong></li>
+</ul>
+<h2 id="debugging-in-embedded-systems">Debugging in Embedded Systems</h2>
+<ul>
+<li>Run software on <strong>PC emulating physical chip in software</strong></li>
+<li>Use <strong>General-Purpose Input/Output (GPIO) pin</strong></li>
+<li><strong>Source-Level Debugger</strong></li>
+<li><strong>Logic Analyzers</strong></li>
+</ul>
+<h2 id="trends-in-embedded-systems">Trends in Embedded Systems</h2>
+<ul>
+<li><strong>AI &amp; ML Integration</strong></li>
+<li><strong>Edge Computing</strong></li>
+<li><strong>Security Enhancements</strong></li>
+<li><strong>Increased Connectivity</strong></li>
+<li><strong>Quantum Computing</strong></li>
+</ul>
+
+    </main>
     
 </body>
 </html>
