--- a/module3.html
+++ b/module3.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Module 3</title>
 </head>
 
@@ -21,8 +21,32 @@
     </header>
     <main>
         <h3>Electronic Components Overview</h3>
+        <p>This week we did a general overview of electronic components.</p>
+        <p>The electronic components covered include:</p>
+        <ul>
+            <li>Resistors</li>
+            <li>Capacitors</li>
+            <li>Inductors</li>
+            <li>Diodes</li>
+            <li>Relays</li>
+            <li>Transistors</li>
+            <li>Quartz Crystal</li>
+        </ul>
+        <h3>Resistors</h3>
+        <p>They impede the flow of current</p>
+        <h3>Capacitors</h3>
+        <p>They store electric field</p>
+        <h3>Inductors</h3>
+        <p>They store magnetic fields.</p>
+        <h3>Diodes</h3>
+        <p>Allow current to flow in one direction</p>
+        <h3>Relays</h3>
+        <p>Used to control switches</p>
+        <h3>Transistors</h3>
+        <p>Combination of two diodes</p>
+        <h3>Quartz Crystal</h3>
         <p>
-            This week we did a general overview of electronic components.
+            Have a known vibrating frequency maintaining the a regular clock in microcontroller
         </p>
     </main>
 </body>
