halfway through duty cycle

--- a/module4.html
+++ b/module4.html
@@ -45,6 +45,20 @@
         <img src="ledTestTinkercad.png" alt="ledTestTinkercad" width="800" height="450">
 
         <h2>Task 2: Varying LED Brightness using PWM</h2>
+        <p><strong>PWM (Pulse Width Modulation)</strong>- This refers to the aspect of obtaining analog signals through digital means</p>
+        <p>This is achieved by turning the digital signal ON and OFF at high frequency. The width <strong>The width (duty cycle) of the ON pulse controls the effective power.</strong>The width (duty cycle) of the ON pulse controls the effective power. of
+            the ON pulse controls the effective power.
+        </p>
+        <p>The duty cycle is measured as a percentage of time the sigal is ON in one cycle:</p>
+        <ul>
+            <li>100% = always ON</li>
+            <li>50% = ON half the time</li>
+            <li>0% = always OFF</li>
+        </ul>
+        <p>The following image illustrate the duty cycle</p>
+        <img src="pwm_duty_cycles.jpg" alt="pwm_duty_cycles" width="800" height="450">
+
+
         <p>The following images illustrate the circuit and code respectively used to vary LED brightness using PWM values</p>
         <img src="pwm_circuit.png" alt="pwm_circuit" width="800" height="450">
         <img src="pwm_code.png" alt="pwm_code" width="800" height="450">
